--- a/vignettes/haPLOType-walkthrough.Rmd
+++ b/vignettes/haPLOType-walkthrough.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-`haplot` comes pre-loadd with some wonderful, real example data to get you started learning its functionality.
+`haplot` comes pre-loaded with some wonderful, real example data to get you started learning its functionality.
 This vignette will walk you through a look at the example data and introduce you to many of the features
 of `haPLOType`.
 
@@ -32,7 +32,7 @@ user input panel.
 selected, then the user input panel will include dropdown boxes that let you choose a group, locus, or
 an individual that you wish to focus on (this choice affects what gets shown in different plots and outputs,
 etc.) It also includes "backwards-and-forwards" buttons, "<" and ">", that let you step individually through
-loci (the buttons to the right of "Locus") or through individual (fish in this case---the buttons to the 
+loci (the buttons to the right of "Locus") or through individuals (fish in this case---the buttons to the 
 right of the "Indiv" dropdown box.)  These are very useful when you want to work your way through each 
 locus individually and choose those that do (and do not) appear to be reliabble enough to include in a 
 panel of amplicons.
@@ -62,57 +62,187 @@ With that background we are ready to start exploring the example data!
 
 The first thing we are going to do is get an overview of the data with no filtering, focusing on 
 different loci.  Not surprisingly, for this we choose *Summary Info --> By Locus*.  We also want to 
-make sure that we are staring from the defaults in ">field selection" (ALL group, ALL loci, ALL individuals),
+make sure that we are starting from the defaults in ">field selection" (ALL group, ALL loci, ALL individuals),
 and under "+read criteria" you want to ensure that "Minimal Read Depth" and "Minimal Allelic Ratio" are
 both set to 0.  (If you had changed these before then once you set them back to 0 you should hit the "apply"
 button to apply the changes.)
 
+Anyway, choosing *Summary Info --> By Locus* will give you four plots.  By default, only the first 15 loci are
+represented (the reason of this is that if you have many loci, you don't want to end up waiting fo an
+eternity to have the final plots rendered.)  You can change the number of loci shown using the 
+"Display" dropdown menu that lives just beneath the user input panel.  You can also choose to go through
+the loci, 15 at a time by choosing which page to go to using the "Page" selector to the right of the
+"Display" selector.  
+
+The four figures shown in this By Locus summary are, from left to right:
+
+1. The distribution of the number of haplotypes observed per individual.  Recall that these are subject to the 
+current filters, of which there are none, so each haplotype, even if it is only observed at a read depth of
+1 read in an individual is counted as observed.  This plot is a bubble plot that essentially is giving
+histogram-like information.  The y-axis has a different loci on different lines.  The x-axis is the number of unique haplotypes
+and the size of the bubbles (and their shading) indicate how many individuals in the data set had the given 
+number of unique haplotypes.    It is particularly revealing to have a peek at the locus `tag_id_1166`.  Most individuals
+have a large number of different haplotypes, likely occurring at very low read depths.  At any rate, this 
+plot makes it clear that there are a lot of low-read-depth sequences that are superfluous and incorrect.
+
+1. Moving to the right is another figure that has loci arranged on the y-axis and number of haplotypes on the 
+x-axis.  However, in this case, the number is counting the total number of unique haplotypes observed at the
+locus when only the two highest-read-depth haplotypes are recorded per individual.
+
+1. Moving right again is a plot with light blue points indicating the fraction of individuals that have
+sufficient read depth to allow a genotypes to be called given the current settings of the filters.  
+Obviously since there is filtering, every locus is going to have a genotype called at every indvidual.
+
+1. The final plot (the furthest right) just shows violin plots expressing the distribution of read depths at
+each locus across the individuals.  Notice that the x-axis is on a log scale.  The plus denotes the median read
+depth.  
+
+### Look at all of the loci
+
+Now that we know what all of these plots mean, let's have a look at all of the loci at once.  We do
+this by merely choossing "ALL" in the "Display" dropdown menu.  From this we see that most loci have a
+read depth greater than 20 or more at all the indidividuals.  Also there is a huge amount of 
+variation across loci in the number of recorded haplotypes per individual.  Clearly since any 
+diploid individual will have at most two distinct haplotypes at a locus, most of these haplotypes
+are spurious, and we can hope that most of them are at very low read depths and will be filtered out.
+We will investigate that.
+
+### Let's apply some filters
+
+Here is the moment we have all been waiting for.  We have been looking at our data in a totally unfiltered state---effectively regarding
+a haplotype with 1 read to be on an equal footing with one having, say, 1000 reads in an individual.  There are two, simple, chief
+filtering methods in haplot.  The first is to discard haplotypes from individuals if they occur in fewer than a certain number
+of reads (The "Minimal Read Depth" criterion).  The second is to discard haplotypes from individauls if their read depth is less than a given fraction of the haplotype
+with the highest read depth in the individual (The "Minimal Allelic Ratio" criterion).  Choose 25 for the Minimal Read Depth and 
+choose 0.2 for the Minimal Allele Ratio, and then hit "Apply".  
+
+Once those filters take effect we find that most individuals are observed to carry one or two haplotypes at each locus.  Some loci
+have more haplotypes that that observed in some individuals.  We will want to check up on those later.  Some of the loci clearly did
+not sequence well.  For example `tag_id_1511`.  To see an expanded view of a few loci, you can highlight (with a click drag) their
+rows in the left hand figure and then double click those to get a zoomed in view.  To zoom back out, to be able to see all
+the loci, just double click the body of the left figure.  
+
+## Mission Two: An overview of individauls
+
+We can take those same filters we just applied and get a good overview of our sequencing data on an 
+individual basis.  Go ahead of choose *Summary Info-->By Individual*.  from the main panel choice
+tabset.  The initial screen that comes up includes only 15 of the individuals.  We can change that
+by choosing "ALL" in the "Display ----- indivs" dropdown. 
+
+This "By Individuals" summary view of the data provides four different plots.  From left to right they
+are:
+
+1.  The ratio of the haplotype with 2nd highest read depth to the haplotype with highest read depth.  
+In this plot, the y-axis denotes individual, the x-axis represents the ratio (it goes from 0 to 1)
+and each locus is represented as a bubble.  The size of the bubble is scaled to some function of 
+read depth (I believe) but it is hard to place that on an absolute scale.  The main take home message
+from this plot is that for most individuals at most loci the two highest-read depth haplotypes have
+fairly similar read depths.  For example a ratio of 0.75 indicates that if the haplotype with highest
+read depth at a locus in an individual was 100 reads, then, the haplotype with second highest read
+depth was 75 reads.  
+
+1. The number of haplotypes observed in each individual.  This is a bubble plot that expresses the relative
+number of loci at which 1, 2, 3, etc haplotypes were observed after filtering.  
+
+1. The number of loci within the individual with sufficient read depth to call a genotype (given the current filters).
+
+1. The distribution over read depths at the loci in the individual.  These are portrayed as violin plots with individual
+values as dots within them.
 
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+It should be noted that the colors of the bubbles on the left-most graph indicate the different
+groups that the individuals fall into.  This is particularly useful when individuals from different
+populations or species are in the alignment.  In the case of our example data, we have merely 
+assigned half of the individuals to be from "pop1" and the other half from "pop2".
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+### Spotting some dodgy individuals
 
-## Vignette Info
+This overview of all the individuals gives us a good chance to spot a few problem fish 
+right off the bat.  Just scanning down the fraction of loci that the individuals might be 
+called at, it is clear that s45 and s277 have not been well sequenced.  That is clear by
+looking at the distribution of read depths across loci.  Perhaps even more intriguing is 
+individual s288 that seems to have pretty reasonable read depths, but very poor allelic 
+balance.  
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+### Looking at the raw counts for s288
 
-## Styles
+At this point, we may as well have a tour of the facilities for visualizing the data for
+in tabular format.  If we want to see the tabular data for individual s288, it
+is fairly straightforward --- choose "Output" from the main panel choice tabset.   By 
+default this will show a few lines of the "Observed variants (unfiltered)" table.
+You can change which table is viewed using the "Select Table" dropdown, but unfiltered
+observed variants is great for now.  
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+In the search box on the right, enter s288 and hit return.  This will filter the table to only
+those rows that include s288.  Once that is done, click on the "locus" column heading to 
+sort entries by locus.  Voila! Now you can peruse all the observed variants and their read
+depths at this individual s288.  Where is says "Show 15 entries" you should change the "15"
+to "All".  This will give you a single scrollable window of all the entries for s288.  Note that
+the column "Haplo" gives the sequence of the reads at the variable positions.  These are
+essentially the haplotypic states of the reads.
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
+Going through the data for 288, it is clear that there will be some genotypes that are not 
+straightforward to call.  For example, at locus `tag_id_879` there are three different
+haplotypes with read depths over 50:  128 reads of CCCTCTG, 100 reads of CCCTCAG, and 
+57 of GCCCCTG.  That is clearly going to be difficult to genotype.  Perhaps this 
+individual has contaminated DNA or represents two individuals that were barcoded equivalently.
+It probably should be tossed out of the final data set.
 
-## Figures
+### Raw count data for a less dodgy individual?
 
-The figure sizes have been customised so that you can easily put two images side-by-side. 
+So, the data for s288 was a little disquieting, but recall that was an individual that 
+looked pathological from the very beginning.  So, what if we look at the raw count
+data for an individual that doesn't look so dodgy?  This will be a good exercise to 
+build up some intuition about how genotyping might be done with microhaplotype read
+data.
 
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
-```
+Let's have a closer look at individual s95.  From the overview, this is an inividual with
+reasonably clean, abundant reads.  We can filter on this individual merely by replacing
+"s288" in the search box with "s95".  A cursory glance at the results for this individual
+show us what appears to be an individual that will be very easy to genotype:  there are never
+more than two haplotypes at high read depth but there is always at least one haplotype
+at high read depth.  When two haplotypes are at high read depth, their read depths
+are largely quite similar.  
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+## Looking over different loci
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+When we start to get down to the level of assessing how well it appears different amplicons will
+allow genotyping via microhaplotypes, it is time to turn to the "Filter Analysis" panel choice.
+First, go ahead and choose *Filter Analysis --> Broad Summary*.  This view gives you a tabular
+perspective on the outcome of different filtering choices on the total number of haplotypes 
+recorded in the data set.  The field selection choices that are present are applied here. So,
+if ALL loci are selected, then it counts up the total number of haplotypes typed and the total 
+number of individuals typed at all loci.  If you select just one locus, the results reflect that
+one locus.
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
+With that in mind, choose the first locus in the dropdown menu: `Plate_1_A01_Sat_GW603857_consensus`
+and see how that changes the broad summary.  Note that across a broad range of the two filtering
+options (minimum read depth and minimal allelic balance) there are four haplotyes in total discovered.
 
-## More Examples
+For a more detailed view of the information associated with this locus (especially relative to the 
+filtering choices) you can select *Filter Analysis --> Distribution Plots*.  This view shows 
+a histogram of read depths and allele balance ratios for reads assigned to each indiduals, and it shows
+these when broken down by haplotype.  The filtering choices in effect appear as dashed red lines.
 
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
+To see how the inferred haplotypes look in terms of haplotype frequencies, and also how the genotypes
+look in terms of Hardy-Weinberg equilibrium, you can choose *Filter Analysis --> Finalized Haplotype*.
+This view consists of four figures.  The first, in the upper left simply shows the frequencies (and the total read depth) of
+different haplotypes.  The right hand part of that same top figure shows the relationship between the 
+observed frequency of different genotypes and the expected frequencies under Hardy-Weinberg equilibrium.
+The individuals used in creating these summaries depends on which "Group" is chosen.  In this case we have 
+"ALL" chosen, and that is fine because the two groups are essentially identical, genetically.  However,
+if we were dealing with groups that were genetically differentiated, we would not want to assess 
+conformance to Hardy-Weinberg proportions of a mixture of those different groups!  In such a case
+it is worthwhile to look at one group at a time.
 
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
-```
+The expected number of different genotypes is shown by the oulines of circles and the observed number by the
+filled, colored circles.  Green are homozygotes, orange are heterozygotes, and it should be relatively 
+self-explanatory.  There is not a scale, but if you click in the center of any of genotypes with 
+observed (non-zero) counts, you will be told (in the upper left of the figure) what the expected and
+observed numbers were for that genotype.  These plots are not meant to provide a stringest test
+of departures from Hardy-Weinberg equilibrium, but do allow the user to diagnose loci that are 
+grotesquely far out of Hardy-Weinberg equilibrium.
 
-Also a quote using `>`:
+Below the haplotype frequencies and HW conformance plots you will find a simple bubble plot 
+expressing haplotype frequencies in the different groups.  
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
