--- a/vignettes/haPLOType-walkthrough.Rmd
+++ b/vignettes/haPLOType-walkthrough.Rmd
@@ -4,7 +4,7 @@ author: "Thomas Ng and Eric C. Anderson"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{haPLOT walkthrough}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
