--- a/vignettes/haPLOType-walkthrough.Rmd
+++ b/vignettes/haPLOType-walkthrough.Rmd
@@ -9,11 +9,23 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-`microhaplot` comes pre-loaded with some wonderful, real example data to get you started to learn about its functionality.
+`microhaplot` comes pre-loaded with some real example data to get you started to learn about its functionality.
 This vignette will walk you through a look at the example data and introduce you to many of the features of `haPLOType`.
 
 The data that we will be exploring together are called `fish2_example.rds` and will appear in the Shiny app dropdown menu
-after installation following the README on GitHub (reproduce that here, later).  These data are from a MiSeq run with 
+after installation following the README on GitHub which tells you to install `microhaplot` like this:
+```r
+devtools::install_github("ngthomas/microhaplot", build_vignettes = TRUE)
+microhaplot::mvHaplotype("~/Shiny") # provide a directory path to host the haPLOType app
+```  
+and then tells you to launch haPLOType like this:
+```r
+library(microhaplot)
+app.path <- "~/Shiny/microhaplot"
+runHaplotype(app.path)
+```
+
+The example data are from a MiSeq run with 
 about 100 amplicons sequenced on close to 300 individual fish.  The fish are all from a single population, but, in order
 to demonstrate the "group" attribute, we put half of the fish into the group "pop1" and the other half of the fish into
 the group "pop2".
@@ -33,17 +45,18 @@ individual(s) that you wish to focus on (this choice affects what gets shown in 
 etc.) It also includes "backwards-and-forwards" buttons, "<" and ">", that let you step individually through
 loci (the buttons to the right of "Locus") or through individuals (fish in this case---the buttons to the 
 right of the "Indiv" dropdown box.) These are very useful when you want to work your way through each 
-locus individually and choose those that do (and do not) appear to be reliabble enough to include in a 
+locus individually and choose those that do (and do not) appear to be reliable enough to include in a 
 panel of amplicons.
-    b. **read criteria tab:** In the "+ read criteria" tab, you are given the choice to define the minimal read depth and minimal allelic ratio that microhaplotype reads have to pass through.
-   Minimal Read depth defines the minimal number of reads that are observed for a particular microhaplotype in a single individual's locus. It can only take positive value.
-   The allelic ratio or allelic balance defines as the ratio of observed read depth of a microhaplotype to read depth of the most common microhaplotype. Again, the value is drawn on a single locus at an individual basis.
-   Ideally, for homozygous case, you expect to see the true microhaplotype to have a large read depth and allelic ratio of one. The false noisy microhaplotype will be in the background with low read depth and allelic ratio close to zero.
-   As for heterozygous case, the two true microhaplotypes ideally should have large and similar number of reads which means that their allelic ratio should be one or/and close to one.
-   So once you set up those criteria, you can apply it with the "apply" button. 
-   You can also save this criteria setup if you want to visit it in the future by clicking the "save" button.
-   There are other options that located on the right hand side that gives you more ways to define the critera. Details for each of the options are shown if you hover your pointer over it. 
-    c. **locus annotation:** This tab is for users to keep track of whether a certain locus should be tossed out based on its quality. There is also a small textbox that lets you to put any comment regarding the locus group. Remember to press the save button for submission. All of these annotation information can be retreived under the table selection for "locus annotation" under `Output` tab.
+    b. **read criteria tab:** In the "+ read criteria" tab, you are given the choice to define the minimal read depth and minimal allelic ratio that microhaplotypes must have to pass through the read depth and allelic ratio filters.
+   _Minimal Read Depth_ defines the minimal number of reads that are observed for a particular microhaplotype in a single individual's locus. It can only take values greater than or equal to 0.
+   The _allelic ratio_ or _allelic balance_ is defined as the ratio of the observed read depth of a microhaplotype to the read depth of the most common microhaplotype in an individual at a locus.
+   Ideally, for homozgous individuals, you expect to see the true microhaplotype to have a large read depth and an allelic ratio of one. False or noisy microhaplotypes will have low read depth and allelic ratio close to zero.
+   For an individual that is truly heterozygous, the two true microhaplotypes ideally should have a large and similar number of reads, which means that their allelic ratio should be at or near one. The _Minimal Allelic Ratio_ defines a filter that 
+   removes reads from haplotypes with allelic ratio less than the minimum.  It must be between 0 and 1.
+   Once you set up these two criteria, you  _apply_ them with the "apply" button. 
+   You can also save these criteria if you want to visit them in the future by clicking the "save" button.
+   There are other options that located on the right hand side that gives you more ways to define filtering criteria. Details for each of the options are shown if you hover your pointer over it. 
+    c. **locus annotation:** This tab is for users to keep track of whether a certain locus should be tossed out based on its quality or other attributes. This is most useful when a particular locus has been chosen under the "field selection" panel. There is also a small textbox that lets you insert any comment regarding the locus group. Remember to press the save button for submission. All of this annotation information can be retreived under the table selection for "locus annotation" under `Output` tab.
 
 
 1. **The main body panel:** This occupies most of haPLOType's screen real estate.  It is where the actual
@@ -66,7 +79,7 @@ of the main body panel:
     filtered and called data and genotypes for later analysis.
     f. *About haPlot: * provides a little background about haplot and how to cite it and whom to contact about it.
     
-With that background we are ready to start exploring the example data!
+With that background we are ready to start exploring the example data.
 
 ## Mission one: An overview of loci 
 
@@ -74,11 +87,11 @@ The first thing we are going to do is get an overview of the data with no filter
 different loci.  Not surprisingly, for this we choose *Summary Info --> By Locus*.  We also want to 
 make sure that we are starting from the defaults in ">field selection" (ALL group, ALL loci, ALL individuals),
 and under "+read criteria" you want to ensure that "Minimal Read Depth" and "Minimal Allelic Ratio" are
-both set to 0.  (If you had changed these before then once you set them back to 0 you should hit the "apply"
+both set to 0.  (If you had changed these before, then, once you set them back to 0, you should hit the "apply"
 button to apply the changes.)
 
 Anyway, choosing *Summary Info --> By Locus* will give you four plots.  By default, only the first 15 loci are
-represented (the reason of this is that if you have many loci, you don't want to end up waiting fo an
+represented (the reason for this is that if you have many loci, you don't want to end up waiting fo an
 eternity to have the final plots rendered.)  You can change the number of loci shown using the 
 "Display" dropdown menu that lives just beneath the user input panel.  You can also choose to go through
 the loci, 15 at a time by choosing which page to go to using the "Page" selector to the right of the
@@ -89,8 +102,8 @@ The four figures shown in this By Locus summary are, from left to right:
 1. The distribution of the number of haplotypes observed per individual.  Recall that these are subject to the 
 current filters, of which there are none, so each haplotype, even if it is only observed at a read depth of
 1 read in an individual is counted as observed.  This plot is a bubble plot that essentially is giving
-histogram-like information.  The y-axis has a different loci on different lines.  The x-axis is the number of unique haplotypes
-and the size of the bubbles (and their shading) indicate how many individuals in the data set had the given 
+histogram-like information.  The y-axis has different loci on different lines.  The x-axis is the number of unique haplotypes
+and the size and shading of the bubbles indicate how many individuals in the data set had the given 
 number of unique haplotypes.    It is particularly revealing to have a peek at the locus `tag_id_1166`.  Most individuals
 have a large number of different haplotypes, likely occurring at very low read depths.  At any rate, this 
 plot makes it clear that there are a lot of low-read-depth sequences that are superfluous and incorrect.
@@ -107,12 +120,10 @@ Obviously since there is filtering, every locus is going to have a genotype call
 each locus across the individuals.  Notice that the x-axis is on a log scale.  The plus denotes the median read
 depth.  
 
-### Look at all of the loci
-
-Now that we know what all of these plots mean, let's have a look at all of the loci at once.  We do
-this by merely choossing "ALL" in the "Display" dropdown menu.  From this we see that most loci have a
-read depth greater than 20 or more at all the indidividuals.  Also there is a huge amount of 
-variation across loci in the number of recorded haplotypes per individual.  Clearly since any 
+Now that we know what all of these plots mean, we can interpret what we see.  
+We note that most loci have a
+read depth greater than 20 at all the individuals.  Also there is a huge amount of 
+variation across loci in the number of recorded haplotypes per individual.  Clearly, since any 
 diploid individual will have at most two distinct haplotypes at a locus, most of these haplotypes
 are spurious, and we can hope that most of them are at very low read depths and will be filtered out.
 We will investigate that.
@@ -122,8 +133,8 @@ We will investigate that.
 Here is the moment we have all been waiting for.  We have been looking at our data in a totally unfiltered state---effectively regarding
 a haplotype with 1 read to be on an equal footing with one having, say, 1000 reads in an individual.  There are two, simple, chief
 filtering methods in haplot.  The first is to discard haplotypes from individuals if they occur in fewer than a certain number
-of reads (The "Minimal Read Depth" criterion).  The second is to discard haplotypes from individauls if their read depth is less than a given fraction of the haplotype
-with the highest read depth in the individual (The "Minimal Allelic Ratio" criterion).  Choose 25 for the Minimal Read Depth and 
+of reads (The "Minimal Read Depth" criterion).  The second is to discard haplotypes from individuals if their read depth is less than a given fraction of the haplotype
+with the highest read depth at the locus in the individual (The "Minimal Allelic Ratio" criterion).  Choose 25 for the Minimal Read Depth and 
 choose 0.2 for the Minimal Allele Ratio, and then hit "Apply".  
 
 Once those filters take effect we find that most individuals are observed to carry one or two haplotypes at each locus.  Some loci
@@ -145,7 +156,7 @@ are:
 1.  The ratio of the haplotype with 2nd highest read depth to the haplotype with highest read depth.  
 In this plot, the y-axis denotes individual, the x-axis represents the ratio (it goes from 0 to 1)
 and each locus is represented as a bubble.  The size of the bubble is scaled to some function of 
-read depth (I believe) but it is hard to place that on an absolute scale.  The main take home message
+read depth, but it is hard to place that on an absolute scale.  The main take home message
 from this plot is that for most individuals at most loci the two highest-read depth haplotypes have
 fairly similar read depths.  For example a ratio of 0.75 indicates that if the haplotype with highest
 read depth at a locus in an individual was 100 reads, then, the haplotype with second highest read
@@ -156,7 +167,8 @@ number of loci at which 1, 2, 3, etc haplotypes were observed after filtering.
 
 1. The number of loci within the individual with sufficient read depth to call a genotype (given the current filters).
 
-1. The distribution over read depths at the loci in the individual.  These are portrayed as violin plots with individual
+1. The distribution of read depths at all the haplotypes that were not filtered out at all the loci in the individual.
+These are portrayed as violin plots with individual
 values as dots within them.
 
 
@@ -176,7 +188,7 @@ balance.
 
 ### Looking at the raw counts for s288
 
-At this point, we may as well have a tour of the facilities for visualizing the data for
+At this point, we may as well have a tour of the facilities for visualizing the data
 in tabular format.  If we want to see the tabular data for individual s288, it
 is fairly straightforward --- choose "Output" from the main panel choice tabset.   By 
 default this will show a few lines of the "Observed variants (unfiltered)" table.
@@ -186,7 +198,7 @@ observed variants is great for now.
 In the search box on the right, enter s288 and hit return.  This will filter the table to only
 those rows that include s288.  Once that is done, click on the "locus" column heading to 
 sort entries by locus.  Voila! Now you can peruse all the observed variants and their read
-depths at this individual s288.  Where is says "Show 15 entries" you should change the "15"
+depths at this individual s288.  Where it says "Show 15 entries" you should change the "15"
 to "All".  This will give you a single scrollable window of all the entries for s288.  Note that
 the column "Haplo" gives the sequence of the reads at the variable positions.  These are
 essentially the haplotypic states of the reads.
@@ -206,7 +218,7 @@ data for an individual that doesn't look so dodgy?  This will be a good exercise
 build up some intuition about how genotyping might be done with microhaplotype read
 data.
 
-Let's have a closer look at individual s95.  From the overview, this is an inividual with
+Let's have a closer look at individual s95.  From the overview, this is an individual with
 reasonably clean, abundant reads.  We can filter on this individual merely by replacing
 "s288" in the search box with "s95".  A cursory glance at the results for this individual
 show us what appears to be an individual that will be very easy to genotype:  there are never
@@ -230,12 +242,12 @@ and see how that changes the broad summary.  Note that across a broad range of t
 options (minimum read depth and minimal allelic balance) there are four haplotyes in total discovered.
 
 For a more detailed view of the information associated with this locus (especially relative to the 
-filtering choices) you can select *Filter Analysis --> Distribution Plots*.  This view shows 
+filtering choices) you can select *Filter Analysis --> Criteria Breakdown*.  This view shows 
 a histogram of read depths and allele balance ratios for reads assigned to each indiduals, and it shows
 these when broken down by haplotype.  The filtering choices in effect appear as dashed red lines.
 
 To see how the inferred haplotypes look in terms of haplotype frequencies, and also how the genotypes
-look in terms of Hardy-Weinberg equilibrium, you can choose *Filter Analysis --> Finalized Haplotype*.
+look in terms of Hardy-Weinberg equilibrium, you can choose *Filter Analysis --> Microhap Summaries*.
 This view consists of four figures.  The first, in the upper left simply shows the frequencies (and the total read depth) of
 different haplotypes.  The right hand part of that same top figure shows the relationship between the 
 observed frequency of different genotypes and the expected frequencies under Hardy-Weinberg equilibrium.
@@ -264,8 +276,8 @@ haplotype sequences, their frequencies, and the positions of the variants within
 ## Output of data
 
 We have already witnessed how to use the *Output* panel to look at the raw data.  It is also possible to 
-download filtered, unfiltered, and processed data from this view using the "Download Data" button.  That
-seems to be working fine, except for the reported individual haplotypes.
+download filtered, unfiltered, and processed data from this view using the "Download Data" button. These 
+saves output in CSV files.
 
 ## Locus annotation
 
